# Dictation-Local-SenseVoice

./: .gitignore  README.md  benchmark.py  benchmark_results.md  benchmark_youtube.py  benchmark_youtube_full.py  benchmark_youtube_v1.py  dictation.py  fun_asr_nano_model.py  pyproject.toml  record_audio.py  youtube_benchmark_results_v1.md
benchmark_results/: full_benchmark_results.md
benchmarks/: basic.py  youtube.py  youtube_full.py
docs/: ASR_RESEARCH.md
models/: fun_asr_nano.py
results/: youtube_benchmark_results.md
youtube_test/: zh-tw.srt
