[project]
name = "dictation-local-sensevoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "funasr>=1.3.0",
    "opencc>=1.1.9",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "pyobjc-core>=12.1",
    "pyobjc-framework-cocoa>=12.1",
    "pyobjc-framework-quartz>=12.1",
    "pyperclip>=1.11.0",
    "quickmachotkey>=2025.7.28",
    "sounddevice>=0.5.3",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
]
